<resources>
    <string name="app_name">Student Information</string>
    <string name="hello">Hello</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="fragmentText_1">Fragment 1</string>
    <string name="fragmentText_2">fragment 2</string>
    <string name="search">Search</string>
    <string name="i_am_changed">I am changed</string>
    <string name="description">description</string>
    <string name="name">Name</string>
    <string name="input_name">Input Name</string>
    <string name="input_phone_number">input phone number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="my_favorite_courses">My favorite courses</string>
    <string name="java">Java</string>
    <string name="android">Android</string>
    <string name="english">English</string>
    <string name="confirmation">Confirmation</string>
    <string name="input_username">Input Username</string>
    <string name="input_password">Input Password</string>
    <string name="login">Login</string>
    <string name="exit">exit</string>
    <string name="Fruits">Fruits</string>
    <array name="constellation" >
        <item>Apple</item>
        <item>Peach</item>
        <item>Pair</item>
    </array>
</resources>